# polymarket-scanner

./: .cursorrules  .dockerignore  .gitignore  CLARIFICATIONS.md  DEPLOY.md  Dockerfile  INFO.md  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml
scanner/: __init__.py  config.py  main.py  pipeline.py
scanner/domain/: __init__.py  models.py
scanner/filters/: __init__.py  base.py  lp_filter.py  market_filter.py  size_filter.py
scanner/output/: __init__.py  base.py  console.py  telegram.py
scanner/services/: __init__.py  enrichment.py  market_service.py  wallet_service.py
scanner/signals/: __init__.py  base.py  clustering.py  contrarian.py  fresh_wallet.py  odds_movement.py  size_anomaly.py  timing.py
scanner/transport/: __init__.py  clob_client.py  mock.py  rest_poller.py  websocket.py
